# advanced-docker-compose-usage

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
sample/: celery.py  main.py
