[tool.poetry]
name = "advanced-docker-compose-usage"
version = "0.1.0"
description = ""
authors = ["Marcelo Lino <mdslino@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
celery = {extras = ["redis"], version = "^5.2.7"}
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
gevent = "^21.12.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
